--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -1,15 +1,16 @@
 ---
-title: Analysis of Australia's Higher Education Loan Program
-  (HELP) Statistics
+title: "Analysis of Australia's Higher Education Loan Program (HELP) Statistics"
 author: "Alana Dabelstein, Anh-Thu Hoang, Chenxi Zhang"
 date: "01/06/2023"
-output: 
-  html_document:
-    toc: true
-    toc_float: true
+output:
+  bookdown::html_document2:
+    toc: yes
+    toc_float: yes
     theme: paper
     fig_width: 9
     fig_height: 5
+  pdf_document:
+    toc: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -23,6 +24,7 @@ library(ggplot2)
 library(scales)
 library(tidyverse)
 library(knitr)
+library(bookdown)
 
 # Loading Data
 table_1 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 2, skip = 2, col_names = TRUE)
@@ -32,31 +34,36 @@ table_4 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 5, skip = 2,
 table_7 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 8, skip = 2, col_names = TRUE)
 ```
 
-## Introduction
+# Introduction
 
-## Analysis
+# Analysis
 
-### Alana's Part
+## Alana's Part
 
-### Taxable Income Group
+## Income and Outstanding Debt
 
-3. What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year?
+<b> What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year? </b>
 
-```{r Income Distribution, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r Income Distribution, echo=FALSE, message=FALSE, warning=FALSE}
 
+# Select columns and filter data
 income_dist <- table_7 %>%
   select('Financial year', 'HELP repayment income', 'ACT', 'NSW', 'NT', 'QLD', 'SA', 'TAS', 'VIC', 'WA') %>%
   filter(`Financial year` == "2021–22") %>%
   filter(`HELP repayment income` != "Unknown")
 
+# Pivot data
 pivoted_dist <- income_dist %>%
   pivot_longer(
     cols = c('ACT', 'NSW', 'NT', 'QLD', 'SA', 'TAS', 'VIC', 'WA'),
     names_to = "State",
     values_to = "Count")
 
+# Create factor to assign order to char type column
 income_factor = c("Up to $9,999", "$10,000 to $19,999", "$20,000 to $29,999", "$30,000 to $39,999", "$40,000 to $49,999", "$50,000 to $59,999", "$60,000 to $69,999", "$70,000 to $79,999", "$80,000 to $89,999", "$90,000 to $99,999", "$100,000 to $109,999", "$110,000 to $119,999", "$120,000 to $129,999", "$130,000 or more")
 
+
+# Create plot
 dist_plot <- ggplot(data = pivoted_dist, aes(x = factor(`HELP repayment income`, level = income_factor), y = Count, fill = State)) +
   geom_bar(stat="identity") +
   theme(panel.grid.major = element_line(color = "grey",
@@ -66,28 +73,45 @@ dist_plot <- ggplot(data = pivoted_dist, aes(x = factor(`HELP repayment income`,
   scale_y_continuous(name="Count of Debtors", labels = label_comma(), 
                      breaks = seq(0, 350000, by = 50000)) +
   xlab("Income Group") +
-  labs(title = "Figure 3: Distribution of HELP debtor income in Australian States and Territories", subtitle = "There is a postive skew in the distribution of HELP debtor income", caption = "Data source: Data.gov.au")
+  labs(title = "Distribution of HELP debtor income in Australian States and Territories", 
+       subtitle = "There is a postive skew in the distribution of HELP debtor income", 
+       caption = "Data source: Data.gov.au")
 
-kable(income_dist, col.names = c("Financial Year","HELP Repayment Income", "ACT", "NSW", "NT", "QLD", "SA", "TAS", "VIC", "WA"), caption = "Table 3: Table of count of outstanding HELP debtors in each income group by State or Territory in 2021-22")
+```
 
+```{r disttab, echo=FALSE, message=FALSE, warning=FALSE}
+
+# Display table
+kable(income_dist, 
+      col.names = c("Financial Year","HELP Repayment Income", "ACT", "NSW", "NT", "QLD", "SA", "TAS", "VIC", "WA"), 
+      caption = "Table of count of outstanding HELP debtors in each income group by State or Territory in 2021-22")
+
+```
+
+```{r distfig, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap="Distribution of HELP debtor income in Australian States and Territories"}
+
+# Display plot
 dist_plot
 
 ```
 
-4. What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time?
+<b> What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time? </b>
 
-```{r Median Income, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
+```{r Median Income, echo=FALSE, message=FALSE, warning=FALSE}
 
+# Select columns and filter data
 median_income <- table_7 %>%
   select('Financial year', 'HELP repayment income', 'ACT', 'NSW', 'NT', 'QLD', 'SA', 'TAS', 'VIC', 'WA') %>%
   filter(`HELP repayment income` != "Unknown")
 
+# Pivot data
 median_pivot <- median_income %>%
   pivot_longer(
     cols = c('ACT', 'NSW', 'NT', 'QLD', 'SA', 'TAS', 'VIC', 'WA'),
     names_to = "State",
     values_to = "Count")
 
+# Change income column from char type to numerical
 median_pivot <- mutate(median_pivot, `HELP repayment income` = case_when(
     `HELP repayment income`=="Up to $9,999" ~ 9999,
     `HELP repayment income`=="$10,000 to $19,999" ~ 19999, 
@@ -107,6 +131,7 @@ median_pivot <- mutate(median_pivot, `HELP repayment income` = case_when(
     is.na(`HELP repayment income`) ~ 0
     ))
 
+# Create new variables
 median_pivoted <- median_pivot %>%
   group_by(`Financial year`) %>%
   summarise(
@@ -115,6 +140,7 @@ median_pivoted <- median_pivot %>%
     `Mean Income` = sum(sort(rep(`HELP repayment income`,Count)))/length(sort(rep(`HELP repayment income`,Count)))
   )
 
+# Change median income column back to char type
 median_pivoted <- mutate(median_pivoted, `Median Income` = case_when(
     `Median Income`==9999 ~ "Up to $9,999",
     `Median Income`==19999 ~ "$10,000 to $19,999", 
@@ -133,6 +159,7 @@ median_pivoted <- mutate(median_pivoted, `Median Income` = case_when(
     `Median Income`==130000 ~ "$130,000 or more"
     ))
 
+# Change mean income column back to char type
 median_pivoted2 <- mutate(median_pivoted, `Mean Income` = case_when(
     `Mean Income`<=9999 ~ "Up to $9,999",
     `Mean Income`<=19999 ~ "$10,000 to $19,999", 
@@ -151,6 +178,7 @@ median_pivoted2 <- mutate(median_pivoted, `Mean Income` = case_when(
     `Mean Income`<=130000 ~ "$130,000 or more"
     ))
 
+# Create plot
 median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) + 
   geom_line(aes(y = `Median Income`, group = 1, color = "Median")) +
   geom_point(aes(y = `Median Income`, group = 1, color = "Median")) +
@@ -158,7 +186,7 @@ median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) +
   geom_point(aes(y = `Mean Income`, group = 1, color = "Mean")) +
   scale_color_manual(values = c(Median = "steelblue", Mean = "darkred"), 
                      labels = c(Median = "Median income", Mean = "Mean income")) +
-  labs(title = "Figure 4: Median and mean income of HELP debtors in Australia from 2009 to 2021", 
+  labs(title = "Median and mean income of HELP debtors in Australia from 2009 to 2021", 
        subtitle = "There has been a positive increase in median taxable income over time", 
        caption = "Data source: Data.gov.au") +
   ylab("Income Group") +
@@ -169,23 +197,36 @@ median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) +
                                         linetype = 3),
         axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
 
-kable(median_pivoted2, col.names = c("Financial Year", "Count of Outstanding Debtors", "Median Income", "Mean Income"), caption = "Table 4: Table of the median and mean taxable income group of outstanding HELP debtors in Australia from 2009-10 to 2021-22")
-
-median_plot
 ```
 
-Table 3 presents the counts of students with outstanding HELP debt in each income group, incremented by $10,000, in all States and Territories in the 2021 fiscal year. The distribution of debtors is depicted in Figure 3. Across all income groups, NSW, QLD, and VIC have the highest number of debtors, and most earn within $20,000–$29,999.
+```{r mediantab, echo=FALSE, message=FALSE, warning=FALSE}
 
-Table 4 presents the median and mean (average) income of HELP debtors in Australia from 2009 to 2021 and the trends are illustrated in Figure 4. The median and average income follow the same positive trend, increasing overall by one income group ($10,000) since 2009. The median typically sits below the average by one income group. In 2021, the median was $40,000–$49,999, while the average was $50,000–$59,999.
+# Display the table
+kable(median_pivoted2, 
+      col.names = c("Financial Year", "Count of Outstanding Debtors", "Median Income", "Mean Income"), 
+      caption = "Table of the median and mean taxable income group of outstanding HELP debtors in Australia from 2009-10 to 2021-22")
 
-Based on the analysis, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The “$130,000 or more” income group is an exception as it does not observe the $10,000 increment rule. The skewed distribution represents an increase in the government’s risk of not recovering HELP debt as many debtors don’t meet the minimum repayment threshold ($47,014 in 2021-22).
+```
+
+```{r medianfig, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap="Median and mean income of HELP debtors in Australia from 2009 to 2021"}
+
+# Display the plot
+median_plot
+
+```
+
+Table \@ref(tab:disttab) presents the counts of students with outstanding HELP debt in each income group, incremented by $10,000, in all States and Territories in the 2021 fiscal year. The distribution of debtors is depicted in Figure \@ref(fig:distfig). Across all income groups, NSW, QLD, and VIC have the highest number of debtors, and most earn within $20,000–$29,999.
+
+Table \@ref(tab:mediantab) presents the median and mean (average) income of HELP debtors in Australia from 2009 to 2021 and the trends are illustrated in Figure \@ref(fig:medianfig). The median and average income follow the same positive trend, increasing overall by one income group ($10,000) since 2009. The median typically sits below the average by one income group. In 2021, the median was $40,000–$49,999, while the average was $50,000–$59,999.
+
+Based on the analysis, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The “$130,000 or more” income group is an exception as it does not observe the $10,000 increment rule. The skewed distribution represents an increase in the government’s risk of not recovering HELP debt as many debtors don’t meet the minimum repayment threshold.
 
 This analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Higher debt may indicate higher education and further progressed careers may both increase the income earned, while new graduates may be in a lower income group.
 
-### Chenxi's Part
+## Chenxi's Part
 
-## Conclusion
+# Conclusion
 
-## References
+# References
 
-## Appendix
+# Appendix
