--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -73,7 +73,7 @@ dist_plot <- ggplot(data = pivoted_dist, aes(x = factor(`HELP repayment income`,
   scale_y_continuous(name="Count of Debtors", labels = label_comma(), 
                      breaks = seq(0, 350000, by = 50000)) +
   xlab("Income Group") +
-  labs(title = "Distribution of HELP debtor income in Australian States and Territories", 
+  labs(title = "The highest number of HELP debtors earn between $20,000 and $29,999", 
        subtitle = "There is a postive skew in the distribution of HELP debtor income", 
        caption = "Data source: Data.gov.au")
 
@@ -94,6 +94,8 @@ kable(income_dist,
 dist_plot
 
 ```
+
+Table \@ref(tab:disttab) presents the counts of students with outstanding HELP debt in each income group, incremented by $10,000, in all States and Territories in the 2021-22 fiscal year. The distribution of debtors is depicted in Figure \@ref(fig:distfig). Across all income groups, NSW, QLD, and VIC have the highest number of debtors. There are 336,992 outstanding HELP debtors earning between $20,000 and $29,999, the highest of all income groups. The number of debtors diminishes gradually as the income group increases. The income group with the lowest number of outstanding debtors is $120,000 to $129,999, with 19,642 debtors. It is to be noted that the “$130,000 or more” income group is an exception as it does not observe the $10,000 increment rule.
 
 <b> What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time? </b>
 
@@ -186,7 +188,7 @@ median_plot <- ggplot(median_pivoted2, aes(x=`Financial year`)) +
   geom_point(aes(y = `Mean Income`, group = 1, color = "Mean")) +
   scale_color_manual(values = c(Median = "steelblue", Mean = "darkred"), 
                      labels = c(Median = "Median income", Mean = "Mean income")) +
-  labs(title = "Median and mean income of HELP debtors in Australia from 2009 to 2021", 
+  labs(title = "The median and mean income group of HELP debtors in 2021 was \n$40,000 to $49,999 and $50,000 to $59,999 respectively", 
        subtitle = "There has been a positive increase in median taxable income over time", 
        caption = "Data source: Data.gov.au") +
   ylab("Income Group") +
@@ -215,11 +217,9 @@ median_plot
 
 ```
 
-Table \@ref(tab:disttab) presents the counts of students with outstanding HELP debt in each income group, incremented by $10,000, in all States and Territories in the 2021 fiscal year. The distribution of debtors is depicted in Figure \@ref(fig:distfig). Across all income groups, NSW, QLD, and VIC have the highest number of debtors, and most earn within $20,000–$29,999.
+Table \@ref(tab:mediantab) presents the median and mean (average) income of HELP debtors in Australia from 2009 to 2021 and the trends are illustrated in Figure \@ref(fig:medianfig). The median and average income follow the same positive trend, increasing overall by one income group ($10,000) since 2009. The median typically sits below the average by one income group. In 2009, the median income group was $30,000 to $39,999 and the mean income group was $40,000 to $49,999. By 2021, the median had increased to $40,000 to $49,999 and the average to $50,000 to $59,999. The lowest median and mean income group of HELP debtors were observed in the 2010-11 to 2012-13 and 2015-16 fiscal years, at $20,000 to $29,999 and $30,000 to $39,999 respectively.
 
-Table \@ref(tab:mediantab) presents the median and mean (average) income of HELP debtors in Australia from 2009 to 2021 and the trends are illustrated in Figure \@ref(fig:medianfig). The median and average income follow the same positive trend, increasing overall by one income group ($10,000) since 2009. The median typically sits below the average by one income group. In 2021, the median was $40,000–$49,999, while the average was $50,000–$59,999.
-
-Based on the analysis, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The “$130,000 or more” income group is an exception as it does not observe the $10,000 increment rule. The skewed distribution represents an increase in the government’s risk of not recovering HELP debt as many debtors don’t meet the minimum repayment threshold.
+Based on the analysis, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution represents an increase in the government’s risk of not recovering HELP debt as many debtors don’t meet the minimum repayment threshold.
 
 This analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Higher debt may indicate higher education and further progressed careers may both increase the income earned, while new graduates may be in a lower income group.
 
