--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -38,7 +38,7 @@ table_7 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 8, skip = 2,
 
 ## Alana's Part
 
-## Income and Outstanding Debt
+## Income and Outstanding Debt {#income}
 
 <b> What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year? </b>
 
@@ -231,13 +231,14 @@ median_plot
 
 Table \@ref(tab:mediantab) presents the median and mean (average) income of HELP debtors in Australia from 2009 to 2021 and the trends are illustrated in Figure \@ref(fig:medianfig). The median and average income follow the same positive trend, increasing overall by one income group ($10,000) since 2009. The median typically sits below the average by one income group. In 2009, the median income group was $30,000 to $39,999 and the mean income group was $40,000 to $49,999. By 2021, the median had increased to $40,000 to $49,999 and the average to $50,000 to $59,999. The lowest median and mean income group of HELP debtors were observed in the 2010-11 to 2012-13 and 2015-16 fiscal years, at $20,000 to $29,999 and $30,000 to $39,999 respectively.
 
-Based on the analysis, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution represents an increase in the government’s risk of not recovering HELP debt as many debtors don’t meet the minimum repayment threshold.
-
-This analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Higher debt may indicate higher education and further progressed careers may both increase the income earned, while new graduates may be in a lower income group.
 
 ## Chenxi's Part
 
 # Conclusion
+
+Based on the analysis in \@ref(income), most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution represents an increase in the government’s risk of not recovering HELP debt as many debtors don’t meet the minimum repayment threshold.
+
+This analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Higher debt may indicate higher education and further progressed careers may both increase the income earned, while new graduates may be in a lower income group.
 
 # References
 
