--- a/references.bib
+++ b/references.bib
@@ -1,1 +1,14 @@
-
+@incollection{BaumSandy2016SLPa,
+abstract = {The main purpose of federal student loans is to solve cash flow problems, not to pay part of the cost of education. Grant aid is the best way to provide subsidies to disadvantaged students. But some borrowers need help paying back their loans because their education does not pay off as well as anticipated. Measures of the amounts individual students borrow are generally more meaningful than the total amount of debt outstanding and there is quite a bit of variation in the borrowing patterns of different students. For example, older students and graduate students tend to carry more debt than others. Default rates are disturbingly high, but the biggest problems are among students who do not complete their programs and among those who attended for-profit institutions.},
+pages = {17--42},
+publisher = {Palgrave Macmillan},
+booktitle = {Student Debt},
+isbn = {9781349949434},
+year = {2016},
+title = {Student Loan Programs and the Realities of Student Debt},
+copyright = {The Editor(s) (if applicable) and The Author(s) 2016},
+language = {eng},
+address = {United States},
+author = {Baum, Sandy},
+keywords = {College finance ; Educational strategies & policy ; Higher & further education, tertiary education ; Student debt ; Student loan default},
+}
