--- a/HELP_Analysis.Rmd
+++ b/HELP_Analysis.Rmd
@@ -36,7 +36,9 @@ table_7 <- read_xlsx("Data/help-statistics-2021-2022.xlsx", sheet = 8, skip = 2,
 
 # Introduction
 
-Testing reference [@BaumSandy2016SLPa]
+The Higher Education Loan Program (HELP) is provided by the Australian Government to eligible students to cover the cost of tertiary education and training. The loan is income-contingent and students are required to repay their loan(s) once their income reaches the minimum threshold through the income tax system. The income-contingency reduces the risk of borrowing for education when the future value of the education or training is not apparent, especially for students from low-income backgrounds [@albrecht1991deferred].
+
+As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third of this debt will not be collected. This raises the issue of sustainability of the program [@anao2016]. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers [@BaumSandy2016SLPa].
 
 # Analysis
 
