--- a/references.bib
+++ b/references.bib
@@ -12,3 +12,26 @@ address = {United States},
 author = {Baum, Sandy},
 keywords = {College finance ; Educational strategies & policy ; Higher & further education, tertiary education ; Student debt ; Student loan default},
 }
+
+@book{albrecht1991deferred,
+  title={Deferred Cost Recovery for Higher Education: Student Loan Programs in Developing Countries},
+  author={Albrecht, D. and Ziderman, A.},
+  number={pts. 63-137},
+  isbn={9780821319529},
+  lccn={lc91035046},
+  series={Deferred Cost Recovery for Higher Education: Student Loan Programs in Developing Countries},
+  url={https://books.google.com.au/books?id=GCWa2sbFoD0C},
+  year={1991},
+  publisher={World Bank}
+}
+
+@techreport{anao2016,
+author = {Jackson, K. and Esguerra, E. and Callaway, N. and Liao, J. and Morris, A.},
+title = {Administration of Higher Education Loan Program
+Debt and Repayments},
+series = {Technical Report},
+volume = {31},
+publisher = {Australian National Audit Office},
+address = {Canberra ACT},
+year = {2016}
+}
