--- a/references.bib
+++ b/references.bib
@@ -35,3 +35,11 @@ publisher = {Australian National Audit Office},
 address = {Canberra ACT},
 year = {2016}
 }
+@techreport{pwc2019,
+author={Dunn, W. and Kamath, R. and Mucherla, R. and Pereira, I. and Perera, S. and Rogers, J.},
+title = {The reality of a new era for Australian banking, Banking Matters, Major Banks Analysis Full Year November 2019},
+series={Banking Matters, Major Banks Analysis Full Year November 2019},
+url={https://www.pwc.com.au/banking-capital-markets/banking-matters/mba_banking_matters_nov_full_19.pdf},
+year={2019},
+publisher={PwC}
+}
